Archive2/05/22e72b6d686359/main.cpp
constexpr int foo();
char str[foo()];
constexpr int foo() { return sizeof(str); }

int main() {}